# BMSTU_NMLA_Lab_2

./: CMakeLists.txt  Gauss.cpp  README.md  generator.cpp  gnuplot_task_9.txt  gnuplot_task_9_commands.plg  main.cpp  tests.cpp
